tests/NormalTests/paczka2/big_fuzzy/55193028.err
Error in line 4: DVosTMtZf S268 35,2
Error in line 5: DVosTMtZf A693 73,2
Error in line 14: UDn S268 60,8
Error in line 17: A693 A19 11,3
Error in line 6: DVosTMtZf S268 61,3
Error in line 21: DVosTMtZf S238 88,4
Error in line 15: UDn A693 24,8
Error in line 22: k3AVAS A19 25,2
Error in line 40: DVosTMtZf S238 24,2
Error in line 43: DVosTMtZf S268 84,0
Error in line 63: k3AVAS S238 91,7
Error in line 69: UDn S268 31,4
Error in line 53: Soy A19 79,0
Error in line 68: DVosTMtZf A19 60,0
Error in line 73: Soy S238 27,4
Error in line 86: DVosTMtZf S238 60,0
Error in line 91: DVosTMtZf A693 94,7
Error in line 94: DVosTMtZf S238 34,3
Error in line 99: DVosTMtZf A19 85,4
Error in line 102: DVosTMtZf S238 -2,2
Error in line 101: DVosTMtZf S238 61,5
Error in line 115: nnpu7Egaa9X S238 34,4
Error in line 121: nnpu7Egaa9X S268 93,8
Error in line 118: Mbh S268 22,3
Error in line 117: Soy A19 61,3
Error in line 136: A693 A19 33,5
Error in line 141: DVosTMtZf S\68 \6,3
Error in line 138: A693 S238 57,6
Error in line 146: Mbh A19 23,5
Error in line 153: UDn S268 8,9
Error in line 157: UDn A19 49,4
Error in line 167: UDn S238 33,2
Error in line 168: UDn A693 92,1
Error in line 166: DVosTMtZf S268 86,9
Error in line 179: A69รฐ S2รฐ8 6,9
Error in line 170: DVosTMtZf S238 86,9
Error in line 180: nnpu7Egaa9X S238 49,6
Error in line 181: UDn A693 54,2
Error in line 184: nnpu7Egaa9X A693 53,8
Error in line 176: Soy A693 56,4
Error in line 211: UDn S268 89,43
Error in line 209: Soy S268 95,1
Error in line 212: Soy S238 0,3
Error in line 244: UDn A693 59,77
Error in line 249: Mbh A19 3,8
